# adaptive-minds

./: .dockerignore  .env.example  .gitignore  ADDING_NEW_LORAS.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  Readme.md  docker-compose.yml  nanoam.py  pyproject.toml  setup.sh
.github/workflows/: test.yml
adaptive_minds/: __init__.py  agent.py  auto.py  catalog.py  cli.py  common.py  external_tools.py  langgraph_agent.py  router.py  server.py  tools.py
catalogs/: qwen25_30.yaml  qwen25_smoke.yaml
docker/: Dockerfile.server  Dockerfile.ui  prefetch.py
docs/: ARCHITECTURE.md
evals/: README.md  mmlu_three_way.py  routing_keyword_baseline.py  routing_table1.py
evals/gold/: routing_gold.jsonl
examples/: README.md  basic_agent.py  basic_router.py  basic_usage.py  curl_examples.sh  interactive_demo.py
playground/: README.md  manage_models.py  metadata.json  models_config.example.yaml  models_config.yaml  models_config_qwen.yaml  server.py  test_workflow.py
playground/train/: README.md  train.py  train_qwen.py
scripts/: README.md  build_demo.sh  capture_demo.py
tests/: test_catalog.py  test_catalog_smoke.py  test_cli.py  test_modes.py  test_prefetch.py  test_server.py
training/: README.md  train_sft.py
ui/: .env.example  app.py  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/lib/: api.ts
video/: README.md  package-lock.json  package.json  tsconfig.json
video/src/: Demo.tsx  Root.tsx
