[project]
name = "adaptive-minds"
version = "1.0.0"
description = "AI-Powered Multi-Agent System with Intelligent Domain Routing"
authors = [
    {name = "Adaptive Minds Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "pydantic>=1.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "langgraph>=0.0.10",
    "uvicorn>=0.15.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "huggingface_hub>=0.16.0",
    "streamlit>=1.28.0",
    "requests>=2.25.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0"
]

[project.optional-dependencies]
training = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "wandb>=0.16.0",
    "xformers>=0.0.22"
]

[project.urls]
Repository = "https://github.com/qpiai/adaptive-minds"
Documentation = "https://github.com/qpiai/adaptive-minds#readme"

[project.scripts]
adaptive-minds-server = "playground.server:main"
adaptive-minds-download = "playground.download_models:main"

[tool.hatch.build.targets.wheel]
packages = ["build", "playground", "examples"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
